--- a/sass/abstractions/_mixins.sass
+++ b/sass/abstractions/_mixins.sass
@@ -332,9 +332,12 @@ $breaklarge: 1180px
 
 =main-btn
 	+border-radius(4px)
-	+rem(padding-top, 10px)
+	+rem(max-width, 400px);
 	+rem(padding-bottom, 10px)
+	+rem(padding-top, 10px)
 	background-color: $color-pink
 	color: $white
 	display: block
+	margin-left: auto
+	margin-right: auto
 	width: 100%
