--- a/sass/components/page-elements/_clients-section.scss
+++ b/sass/components/page-elements/_clients-section.scss
@@ -2,5 +2,9 @@
   .views-row {
     @include rem(padding, 0 5px);
     @include rem(margin, 20px 0);
+    outline: none;
+    * {
+      outline: none;
+    }
   }
 }
