--- a/sass/components/page-elements/_slide-configs.scss
+++ b/sass/components/page-elements/_slide-configs.scss
@@ -2,7 +2,7 @@
   @include transform(translateX(-50%));
   bottom: 3%;
   left: 50%;
-  position: absolute;
+  position: fixed;
   z-index: 99;
   a {
     @include rem(height, 50px);
@@ -11,6 +11,9 @@
     background-size: contain;
     display: block;
     font-size: 0;
+    &.last-section-is-active {
+      display: none !important;
+    }
   }
 }
 .slick-dots {
@@ -51,8 +54,8 @@
   }
 }
 @media (min-width: $small_device_width) {
-  .services-section .next-slide-section a,
-  .clients-section .next-slide-section a {
+  .next-slide-section a.active-section-5,
+  .next-slide-section a.active-section-6 {
     @include rem(height, 55px);
     @include rem(width, 55px);
     background: url('../images/icons/next-section-tab.png') no-repeat;
